# observatory

./: .env  README.md  docker-compose.yml
config/: alertmanager.yml  grafana-dashboards.yml  grafana-datasources.yml  logstash.conf  loki-config.yml  nautobot_config.py  nautobot_plugin.yml  prometheus-alerts.yml  prometheus.yml  telegraf.conf
dashboards/logs/: loki-logs-dashboard.json
dashboards/network/: nautobot-dashboard.json
dashboards/system/: node-exporter-dashboard.json  telegraf-dashboard.json
webhook/: __init__.py  pyproject.toml  requirements.txt  webhook.Dockerfile
webhook/app/: __init__.py  api.py  config.py  main.py
